[package]
name = "scheme-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
inkwell = { version = "0.8.0", default-features = false, features = ["llvm18-1", "target-x86"] }
tokio = { version = "1", features = ["rt", "macros", "net", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
